Updated Dialog heights, to prevent double scrollbars fixes #65

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,10 @@ $custom-typography: mat-typography-config(
   }
 };
 
+.mat-dialog-content {
+  height: 600px;
+}
+
 body {
   font-size: 16px;
   background-color: #2f3640 !important;
